# coding-examples

./: .gitignore  CMakeLists.txt  README.md
examples/hello-world/: CMakeLists.txt
examples/hello-world/include/: RectanglePrinter.h
examples/hello-world/src/: RectanglePrinter.cpp  main.cpp
examples/idleon/: CMakeLists.txt  README.md
examples/idleon/include/: Screenshot.h
examples/idleon/src/: Screenshot.cpp  main.cpp
examples/lottery/: CMakeLists.txt
examples/lottery/include/: Lottery.h  LottoMachine.h  LottoTicket.h
examples/lottery/src/: Lottery.cpp  LottoMachine.cpp  LottoTicket.cpp  main.cpp
examples/simple-buffer/: CMakeLists.txt
examples/simple-buffer/include/: Counter.h
examples/simple-buffer/src/: Counter.cpp  main.cpp
include/: Buffer.h  GeneticLearning.h  Population.h  Thread.h  Version.h
internal/: template-cmakelists  template-cpp
src/: Thread.cpp  Version.cpp
